add logic uuser